# browsepilot

./: .gitignore  BrowsePilot 需求规格说明书.md  CONTRIBUTING.md  LICENSE  README.md  需要解决的问题.md
browsepilot/: .env.example  .gitignore  README.md  mcp_settings.json  pyproject.toml  start.bat  start.sh  start_all.bat  start_all.sh
browsepilot/.claude/: settings.local.json
browsepilot/backend/: __init__.py
browsepilot/backend/app/: config.py  events.py  main.py  mcp_client.py  mcp_transport.py  session_manager.py
browsepilot/backend/app/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
browsepilot/browser_mcp/: __init__.py  browser_manager.py  browser_pool.py  main.py  server.py
browsepilot/browser_mcp/tools/: __init__.py  click.py  execute_script.py  get_content.py  get_page_structure.py  navigate.py  screenshot.py  scroll.py  search_engines.py  test_search_engines.py  test_security.py  type_text.py
browsepilot/frontend/: __init__.py  streamlit_app.py
browsepilot/frontend-vue/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
browsepilot/frontend-vue/src/: App.vue  main.ts  style.css
browsepilot/frontend-vue/src/api/: chat.ts
browsepilot/frontend-vue/src/components/: ChatInput.vue  ChatMessage.vue  ChatPanel.vue  MonitorPanel.vue  PlanSteps.vue  ReplayPanel.vue  ScreenshotViewer.vue  Sidebar.vue  ThinkingIndicator.vue  TokenCounter.vue
browsepilot/frontend-vue/src/composables/: useSSE.ts
browsepilot/tests/: conftest.py  test_integration.py  test_multiturn.py  test_pre_observe.py
(+17 files in other folders)
