[project]
name = "browsepilot"
version = "0.1.0"
description = "Browser automation AI agent with deep planning and introspection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sse-starlette>=1.8",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "mcp>=1.25.0",
    "playwright>=1.52",
    "streamlit>=1.35",
    "loguru>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["browser_mcp", "backend", "frontend"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
